# SpectrumCore

./: README.md  conftest.py  pyproject.toml  setup.py
SpectrumCore/: Spectrum.py  __init__.py
SpectrumCore/io/: __init__.py  io.py
SpectrumCore/physics/: deredden.py  doppler.py  telluric.py
SpectrumCore/plot/: __init__.py  plot.py  plot_setup.py
SpectrumCore/processing/: __init__.py  preprocessing.py  smooth.py
SpectrumCore/util/: interpolate.py
tests/: test_Spectrum.py
