[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"


[project]
name = "SpectrumCore"
version = "0.0.1"
authors = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"},
]
maintainers = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"}
]
description = "Core spectrum-reading and -processing functions."
license = {file = "LICENSE"}
readme = "README.md"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
Repository = "https://github.com/anthonyburrow/SpectrumCore.git"
